main/minigo/parser/.antlr/MiniGoParser.py
# Generated from c:/Users/RAZER/OneDrive/Documents/HCMUTSUB/PPL/assignment3/initial/src/main/minigo/parser/MiniGo.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MiniGoParser ( Parser ):

    grammarFileName = "MiniGo.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'if'", "'else'", "'for'", "'return'", "'continue'", 
                     "'break'", "'range'", "'func'", "'type'", "'struct'", 
                     "'interface'", "'string'", "'int'", "'float'", "'boolean'", 
                     "'const'", "'var'", "'nil'", "'true'", "'false'", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'=='", "'!='", "'<'", 
                     "'<='", "'>'", "'>='", "'&&'", "'||'", "'!'", "'='", 
                     "'+='", "'-='", "'*='", "'/='", "'%='", "':'", "';'", 
                     "','", "'('", "')'", "'{'", "'}'", "'['", "']'", "':='", 
                     "'.'", "<INVALID>", "'\\n'" ]

    symbolicNames = [ "<INVALID>", "DECIMAL_LIT", "BINARY_LIT", "OCTAL_LIT", 
                      "HEX_LIT", "BOOLEAN_LIT", "FLOAT_LIT", "STRING_LIT", 
                      "IF", "ELSE", "FOR", "RETURN", "CONTINUE", "BREAK", 
                      "RANGE", "FUNC", "TYPE", "STRUCT", "INTERFACE", "STRING", 
                      "INT", "FLOAT", "BOOLEAN", "CONST", "VAR", "NIL", 
                      "TRUE", "FALSE", "PLUS", "MINUS", "MULTIPLY", "DIVIDE", 
                      "MODULO", "EQUAL", "NOT_EQUAL", "LESS_THAN", "LESS_THAN_OR_EQUAL", 
                      "GREATER_THAN", "GREATER_THAN_OR_EQUAL", "LOGICAL_AND", 
                      "LOGICAL_OR", "NOT", "ASSIGN", "PLUS_ASSIGN", "MINUS_ASSIGN", 
                      "MULTIPLY_ASSIGN", "DIVIDE_ASSIGN", "MODULO_ASSIGN", 
                      "COLON", "SEMI_COLON", "COMMA", "L_PARENT", "R_PARENT", 
                      "L_CURLY", "R_CURLY", "L_BRACKET", "R_BRACKET", "DECLARE_ASSIGN", 
                      "DOT", "ID", "NEWLINE", "WHITESPACE", "COMMENT_MULTI", 
                      "LINE_COMMENT", "ERROR_CHAR", "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_decl_list = 1
    RULE_decl_list_tail = 2
    RULE_declaration = 3
    RULE_constDecl = 4
    RULE_varDecl = 5
    RULE_varSpec = 6
    RULE_typeDecl = 7
    RULE_funcDecl = 8
    RULE_methodDecl = 9
    RULE_receiver = 10
    RULE_receiverComponent = 11
    RULE_signature = 12
    RULE_parameters = 13
    RULE_parameterList = 14
    RULE_parameterComponent = 15
    RULE_result = 16
    RULE_block = 17
    RULE_statementList = 18
    RULE_statementList_tail = 19
    RULE_statement = 20
    RULE_basicStatement = 21
    RULE_methodOrFunctionCall = 22
    RULE_methodChain = 23
    RULE_chainItems = 24
    RULE_chainItem = 25
    RULE_oneValue = 26
    RULE_assignmentStatement = 27
    RULE_assignOperations = 28
    RULE_shortValDeclaration = 29
    RULE_returnStatement = 30
    RULE_breakStatement = 31
    RULE_continueStatement = 32
    RULE_ifStatement = 33
    RULE_elseClause = 34
    RULE_condition = 35
    RULE_forStatement = 36
    RULE_forClause = 37
    RULE_simpleStmt = 38
    RULE_forRangeArray = 39
    RULE_expressionStmt = 40
    RULE_assignment = 41
    RULE_shortVarDecl = 42
    RULE_type_ = 43
    RULE_typeName = 44
    RULE_arrayType = 45
    RULE_index = 46
    RULE_indexExpr = 47
    RULE_structType = 48
    RULE_fieldDeclList = 49
    RULE_interfaceType = 50
    RULE_methodSpecList = 51
    RULE_methodSpec = 52
    RULE_fieldDecl = 53
    RULE_identifierList = 54
    RULE_literal = 55
    RULE_basicLiteral = 56
    RULE_integerLiteral = 57
    RULE_compositeLiteral = 58
    RULE_compositeLiteralValue = 59
    RULE_elementList = 60
    RULE_element = 61
    RULE_fieldName = 62
    RULE_value = 63
    RULE_expression = 64
    RULE_logicalOr = 65
    RULE_logicalAnd = 66
    RULE_relational = 67
    RULE_additive = 68
    RULE_multiplication_division_modulo = 69
    RULE_unary = 70
    RULE_postfix = 71
    RULE_primaryExpr = 72
    RULE_operand = 73
    RULE_arguments = 74
    RULE_expressionList = 75
    RULE_endOfSentence = 76

    ruleNames =  [ "program", "decl_list", "decl_list_tail", "declaration", 
                   "constDecl", "varDecl", "varSpec", "typeDecl", "funcDecl", 
                   "methodDecl", "receiver", "receiverComponent", "signature", 
                   "parameters", "parameterList", "parameterComponent", 
                   "result", "block", "statementList", "statementList_tail", 
                   "statement", "basicStatement", "methodOrFunctionCall", 
                   "methodChain", "chainItems", "chainItem", "oneValue", 
                   "assignmentStatement", "assignOperations", "shortValDeclaration", 
                   "returnStatement", "breakStatement", "continueStatement", 
                   "ifStatement", "elseClause", "condition", "forStatement", 
                   "forClause", "simpleStmt", "forRangeArray", "expressionStmt", 
                   "assignment", "shortVarDecl", "type_", "typeName", "arrayType", 
                   "index", "indexExpr", "structType", "fieldDeclList", 
                   "interfaceType", "methodSpecList", "methodSpec", "fieldDecl", 
                   "identifierList", "literal", "basicLiteral", "integerLiteral", 
                   "compositeLiteral", "compositeLiteralValue", "elementList", 
                   "element", "fieldName", "value", "expression", "logicalOr", 
                   "logicalAnd", "relational", "additive", "multiplication_division_modulo", 
                   "unary", "postfix", "primaryExpr", "operand", "arguments", 
                   "expressionList", "endOfSentence" ]

    EOF = Token.EOF
    DECIMAL_LIT=1
    BINARY_LIT=2
    OCTAL_LIT=3
    HEX_LIT=4
    BOOLEAN_LIT=5
    FLOAT_LIT=6
    STRING_LIT=7
    IF=8
    ELSE=9
    FOR=10
    RETURN=11
    CONTINUE=12
    BREAK=13
    RANGE=14
    FUNC=15
    TYPE=16
    STRUCT=17
    INTERFACE=18
    STRING=19
    INT=20
    FLOAT=21
    BOOLEAN=22
    CONST=23
    VAR=24
    NIL=25
    TRUE=26
    FALSE=27
    PLUS=28
    MINUS=29
    MULTIPLY=30
    DIVIDE=31
    MODULO=32
    EQUAL=33
    NOT_EQUAL=34
    LESS_THAN=35
    LESS_THAN_OR_EQUAL=36
    GREATER_THAN=37
    GREATER_THAN_OR_EQUAL=38
    LOGICAL_AND=39
    LOGICAL_OR=40
    NOT=41
    ASSIGN=42
    PLUS_ASSIGN=43
    MINUS_ASSIGN=44
    MULTIPLY_ASSIGN=45
    DIVIDE_ASSIGN=46
    MODULO_ASSIGN=47
    COLON=48
    SEMI_COLON=49
    COMMA=50
    L_PARENT=51
    R_PARENT=52
    L_CURLY=53
    R_CURLY=54
    L_BRACKET=55
    R_BRACKET=56
    DECLARE_ASSIGN=57
    DOT=58
    ID=59
    NEWLINE=60
    WHITESPACE=61
    COMMENT_MULTI=62
    LINE_COMMENT=63
    ERROR_CHAR=64
    UNCLOSE_STRING=65
    ILLEGAL_ESCAPE=66

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl_list(self):
            return self.getTypedRuleContext(MiniGoParser.Decl_listContext,0)


        def EOF(self):
            return self.getToken(MiniGoParser.EOF, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_program




    def program(self):

        localctx = MiniGoParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.decl_list()
            self.state = 155
            self.match(MiniGoParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Decl_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(MiniGoParser.DeclarationContext,0)


        def decl_list_tail(self):
            return self.getTypedRuleContext(MiniGoParser.Decl_list_tailContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_decl_list




    def decl_list(self):

        localctx = MiniGoParser.Decl_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl_list)
        try:
            self.state = 161
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [-1]:
                self.enterOuterAlt(localctx, 1)

                pass
            elif token in [15, 16, 23, 24]:
                self.enterOuterAlt(localctx, 2)
                self.state = 158
                self.declaration()
                self.state = 159
                self.decl_list_tail()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Decl_list_tailContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(MiniGoParser.DeclarationContext,0)


        def decl_list_tail(self):
            return self.getTypedRuleContext(MiniGoParser.Decl_list_tailContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_decl_list_tail




    def decl_list_tail(self):

        localctx = MiniGoParser.Decl_list_tailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl_list_tail)
        try:
            self.state = 167
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [-1]:
                self.enterOuterAlt(localctx, 1)

                pass
            elif token in [15, 16, 23, 24]:
                self.enterOuterAlt(localctx, 2)
                self.state = 164
                self.declaration()
                self.state = 165
                self.decl_list_tail()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def endOfSentence(self):
            return self.getTypedRuleContext(MiniGoParser.EndOfSentenceContext,0)


        def constDecl(self):
            return self.getTypedRuleContext(MiniGoParser.ConstDeclContext,0)


        def varDecl(self):
            return self.getTypedRuleContext(MiniGoParser.VarDeclContext,0)


        def typeDecl(self):
            return self.getTypedRuleContext(MiniGoParser.TypeDeclContext,0)


        def funcDecl(self):
            return self.getTypedRuleContext(MiniGoParser.FuncDeclContext,0)


        def methodDecl(self):
            return self.getTypedRuleContext(MiniGoParser.MethodDeclContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_declaration




    def declaration(self):

        localctx = MiniGoParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 174
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 169
                self.constDecl()
                pass

            elif la_ == 2:
                self.state = 170
                self.varDecl()
                pass

            elif la_ == 3:
                self.state = 171
                self.typeDecl()
                pass

            elif la_ == 4:
                self.state = 172
                self.funcDecl()
                pass

            elif la_ == 5:
                self.state = 173
                self.methodDecl()
                pass


            self.state = 176
            self.endOfSentence()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONST(self):
            return self.getToken(MiniGoParser.CONST, 0)

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(MiniGoParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(MiniGoParser.ExpressionContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_constDecl




    def constDecl(self):

        localctx = MiniGoParser.ConstDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_constDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 178
            self.match(MiniGoParser.CONST)
            self.state = 179
            self.match(MiniGoParser.ID)
            self.state = 180
            self.match(MiniGoParser.ASSIGN)
            self.state = 181
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MiniGoParser.VAR, 0)

        def varSpec(self):
            return self.getTypedRuleContext(MiniGoParser.VarSpecContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_varDecl




    def varDecl(self):

        localctx = MiniGoParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_varDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 183
            self.match(MiniGoParser.VAR)
            self.state = 184
            self.varSpec()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarSpecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def type_(self):
            return self.getTypedRuleContext(MiniGoParser.Type_Context,0)


        def ASSIGN(self):
            return self.getToken(MiniGoParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(MiniGoParser.ExpressionContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_varSpec




    def varSpec(self):

        localctx = MiniGoParser.VarSpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_varSpec)
        try:
            self.state = 196
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 186
                self.match(MiniGoParser.ID)
                self.state = 187
                self.type_()
                self.state = 188
                self.match(MiniGoParser.ASSIGN)
                self.state = 189
                self.expression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 191
                self.match(MiniGoParser.ID)
                self.state = 192
                self.type_()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 193
                self.match(MiniGoParser.ID)
                self.state = 194
                self.match(MiniGoParser.ASSIGN)
                self.state = 195
                self.expression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE(self):
            return self.getToken(MiniGoParser.TYPE, 0)

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def structType(self):
            return self.getTypedRuleContext(MiniGoParser.StructTypeContext,0)


        def interfaceType(self):
            return self.getTypedRuleContext(MiniGoParser.InterfaceTypeContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_typeDecl




    def typeDecl(self):

        localctx = MiniGoParser.TypeDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_typeDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 198
            self.match(MiniGoParser.TYPE)
            self.state = 199
            self.match(MiniGoParser.ID)
            self.state = 202
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [17]:
                self.state = 200
                self.structType()
                pass
            elif token in [18]:
                self.state = 201
                self.interfaceType()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(MiniGoParser.FUNC, 0)

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def signature(self):
            return self.getTypedRuleContext(MiniGoParser.SignatureContext,0)


        def block(self):
            return self.getTypedRuleContext(MiniGoParser.BlockContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_funcDecl




    def funcDecl(self):
